fix: scene overflow

--- a/active/css/style.css
+++ b/active/css/style.css
@@ -21,10 +21,12 @@ License: https://themeforest.net/licenses/standard
 /**********************************/
 @import url("https://fonts.googleapis.com/css?family=Voltaire");
 
-html{
-  min-height: 100%;
-  height: 100%;
+html {
+  min-height: 100vh;
+  height: 100vh;
   overflow-x: hidden;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
@@ -32,23 +34,23 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Voltaire", Helvetica, Arial, sans-serif;
-  font-weight: 400
+  font-weight: 400;
 }
 
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /**********************************/
 /******* 2.0 Content Styles *******/
 /**********************************/
 #world {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	background: linear-gradient(#e4e0ba, #f7d9aa);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: linear-gradient(#e4e0ba, #f7d9aa);
 }
 .content {
   text-align: left;
@@ -116,7 +118,7 @@ body {
   width: 20%;
   font-size: 3vw;
   font-weight: 100;
-  line-height: .8em;
+  line-height: 0.8em;
   letter-spacing: 2px;
   text-align: left;
   color: #333;
@@ -130,21 +132,21 @@ body {
   letter-spacing: 0;
   margin-top: 20px;
   color: #555;
-  text-transform: lowercase
+  text-transform: lowercase;
 }
 
-@media (max-width:480px) {
-    #countdown {
-        width: 100%;
-    }
-    #countdown > div {
-        width: 25%;
-        font-size: 30px;
-        font-weight: 700;
-        line-height: .8em;
-        letter-spacing: 2px;
-    }
-    #countdown > div > span {
-      font-size: 11px;
-    }
+@media (max-width: 480px) {
+  #countdown {
+    width: 100%;
+  }
+  #countdown > div {
+    width: 25%;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 0.8em;
+    letter-spacing: 2px;
+  }
+  #countdown > div > span {
+    font-size: 11px;
+  }
 }
